# Computational-Physics

./: main.py  moj.py  pyproject.toml  test_moj.py
.github/workflows/: tests.yml
