[project]
name = "projekt2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numba>=0.65.0",
    "numpy>=2.4.4",
    "pytest>=9.0.3",
    "scienceplots>=2.2.1",
    "scikit-image>=0.26.0",
    "seaborn>=0.13.2",
]
